@@ -35,7 +35,6 @@ objects. Previsoulay in version 1.0.x, the default behavior is that
 there will be `N+1` SQL statements if an eager loading involves
 `N` `HAS_MANY` or `MANY_MANY` relations.
 
-
 Changes Related with Table Alias in Relational Active Record
 ------------------------------------------------------------
 
@@ -43,6 +42,10 @@ Changes Related with Table Alias in Relational Active Record
 relation name. Previously in version 1.0.x, by default Yii would automatically
 generate a table alias for each relational table, and we had to use the prefix
 `??.` to refer to this automatically generated alias.
+
+- The alias name for the primary table in a relational AR query is fixed to be `t`.
+Previsouly in version 1.0.x, it was the same as the table name.
+
 
 Changes Related with Tabular Input
 ----------------------------------
