@@ -420,9 +420,10 @@ class CDbCommandBuilder extends CComponent
 	 * @param array parameters to be bound to an SQL statement.
 	 * This is only used when the second parameter is a string (query condition).
 	 * In other cases, please use {@link CDbCriteria::params} to set parameters.
+	 * @param string column prefix (ended with dot). If null, it will be the table name
 	 * @return CDbCriteria the created query criteria
 	 */
-	public function createPkCriteria($table,$pk,$condition='',$params=array())
+	public function createPkCriteria($table,$pk,$condition='',$params=array(),$prefix=null)
 	{
 		$this->ensureTable($table);
 		$criteria=$this->createCriteria($condition,$params);
@@ -430,7 +431,7 @@ class CDbCommandBuilder extends CComponent
 			$pk=array($pk);
 		if(is_array($table->primaryKey) && !isset($pk[0]) && $pk!==array()) // single composite key
 			$pk=array($pk);
-		$condition=$this->createInCondition($table,$table->primaryKey,$pk);
+		$condition=$this->createInCondition($table,$table->primaryKey,$pk,$prefix);
 		if($criteria->condition!=='')
 			$criteria->condition=$condition.' AND ('.$criteria->condition.')';
 		else
@@ -463,9 +464,10 @@ class CDbCommandBuilder extends CComponent
 	 * @param array parameters to be bound to an SQL statement.
 	 * This is only used when the second parameter is a string (query condition).
 	 * In other cases, please use {@link CDbCriteria::params} to set parameters.
+	 * @param string column prefix (ended with dot). If null, it will be the table name
 	 * @return CDbCriteria the created query criteria
 	 */
-	public function createColumnCriteria($table,$columns,$condition='',$params=array())
+	public function createColumnCriteria($table,$columns,$condition='',$params=array(),$prefix=null)
 	{
 		$this->ensureTable($table);
 		$criteria=$this->createCriteria($condition,$params);
@@ -473,28 +475,30 @@ class CDbCommandBuilder extends CComponent
 		$conditions=array();
 		$values=array();
 		$i=0;
+		if($prefix===null)
+			$prefix=$table->rawName.'.';
 		foreach($columns as $name=>$value)
 		{
 			if(($column=$table->getColumn($name))!==null)
 			{
 				if(is_array($value))
-					$conditions[]=$this->createInCondition($table,$name,$value);
+					$conditions[]=$this->createInCondition($table,$name,$value,$prefix);
 				else if($value!==null)
 				{
 					if($bindByPosition)
 					{
-						$conditions[]=$table->rawName.'.'.$column->rawName.'=?';
+						$conditions[]=$prefix.$column->rawName.'=?';
 						$values[]=$value;
 					}
 					else
 					{
-						$conditions[]=$table->rawName.'.'.$column->rawName.'='.self::PARAM_PREFIX.$i;
+						$conditions[]=$prefix.$column->rawName.'='.self::PARAM_PREFIX.$i;
 						$values[self::PARAM_PREFIX.$i]=$value;
 						$i++;
 					}
 				}
 				else
-					$conditions[]=$table->rawName.'.'.$column->rawName.' IS NULL';
+					$conditions[]=$prefix.$column->rawName.' IS NULL';
 			}
 			else
 				throw new CDbException(Yii::t('yii','Table "{table}" does not have a column named "{column}".',
